--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,50 @@ nav {
     color: white;
 }
 
+.infographic-wrapper {
+    display: flex;
+    padding-right: 0.7vw;
+    padding-left: 0.7vw;
+    width: 100vw;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+.blokken {
+    color: black;
+    font-family: 'Public Sans', sans-serif;
+    width: 350px;
+    height: 200px;
+    background: #ffffff;
+    border-radius: 40px;
+    border-style: solid;
+    border-color: rgb(95, 95, 95);
+    border-width: 1px;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+}
+
+.button4 {
+    width: 125px;
+    height: 25px;
+    background: #ffcc00;
+    border-radius: 40px;
+    cursor: pointer;
+    color: black;
+    text-align: center;
+}
+
+.button4:hover {
+    color: white;
+    transition-duration: 400ms;
+}
+
+.openings {
+    position: absolute;
+    left: 50%;
+    top: 10%;
+}
+
 
 /*Stying for small screens*/
 
@@ -233,6 +277,45 @@ nav {
         position: absolute;
         top: 10%;
     }
+    .infographic-wrapper {
+        display: grid;
+        grid-template-columns: auto;
+        grid-row-gap: 5px;
+        justify-content: space-evenly;
+        text-align: center;
+        position: absolute;
+        top: 30%;
+    }
+    .blokken {
+        color: black;
+        font-family: 'Public Sans', sans-serif;
+        width: 350px;
+        height: 200px;
+        background: #ffffff;
+        border-radius: 40px;
+        border-style: solid;
+        border-color: rgb(95, 95, 95);
+        border-width: 1px;
+        box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
+    }
+    .button4 {
+        width: 125px;
+        height: 25px;
+        background: #ffcc00;
+        border-radius: 40px;
+        cursor: pointer;
+        color: black;
+        text-align: center;
+    }
+    .button4:hover {
+        color: white;
+        transition-duration: 400ms;
+    }
+    .openings {
+        position: absolute;
+        left: 50%;
+        top: 10%;
+    }
 }
 
 
@@ -249,48 +332,4 @@ nav {
 
 .toggle .line3 {
     transform: rotate(45deg) translate(-5px, -6px);
-}
-
-.infographic-wrapper {
-    display: flex;
-    padding-right: 0.7vw;
-    padding-left: 0.7vw;
-    width: 100vw;
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
-}
-
-.blokken {
-    color: black;
-    font-family: 'Public Sans', sans-serif;
-    width: 350px;
-    height: 200px;
-    background: #ffffff;
-    border-radius: 40px;
-    border-style: solid;
-    border-color: rgb(95, 95, 95);
-    border-width: 1px;
-    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
-}
-
-.button4 {
-    width: 125px;
-    height: 25px;
-    background: #ffcc00;
-    border-radius: 40px;
-    cursor: pointer;
-    color: black;
-    text-align: center;
-}
-
-.button4:hover {
-    color: white;
-    transition-duration: 400ms;
-}
-
-.openings {
-    position: absolute;
-    left: 50%;
-    top: 10%;
 }
